--- a/D4CSSFile.css
+++ b/D4CSSFile.css
@@ -1,20 +1,24 @@
+/* style of body content of the page */
 body 
 {
 background: Black;
 }
 
+/* style of the most important heading of the page */
 h1 
 {
 text-align: center;
 color: Tomato;
 }
 
+/* paragraph's style */
 p
 {
 text-align: center;
 color: Tomato;
 }
 
+/* form's style */
 form 
 {
 text-align: center;
@@ -22,6 +26,7 @@ color: Tomato;
 font-weight: bold;
 }
 
+/* button's style */
 button 
 {
 background-color: Tomato;
