--- a/D4CSSFile.css
+++ b/D4CSSFile.css
@@ -1,3 +1,10 @@
+/*
+ Programmer: Nami Huyen Tram
+ Date: 10/1/2019
+ Comments: Class Project - Deliverable 4 - HTML & CSS 
+ */
+
+
 /* style of body content of the page */
 body 
 {
